--- a/DockerComposeWorkouts/compose-assignment-2/docker-compose.yml
+++ b/DockerComposeWorkouts/compose-assignment-2/docker-compose.yml
@@ -1,1 +1,28 @@
 # create your drupal and postgres config here, based off the last assignment
+version: 3.2
+services:
+  drupal:
+    build: .
+    image: custom-drupal
+    ports:
+      - 8080:8080
+    volumes:
+      - drupal_modules:/var/www/html/modules
+      - drupal_profiles:/var/www/html/profiles
+      - drupal_themes:/var/www/html/themes
+      - drupal_sites:/var/www/html/sites
+    restart: always
+  postgres:
+    image: postgres:9.6
+    environment:
+      POSTGRES_PASSWORD: password
+    volumes:
+        - db_data:/var/lib/postgresql/data
+    restart: always
+
+volumes:
+  drupal_modules:
+  drupal_profiles:
+  drupal_themes:
+  drupal_sites:
+  db_data:
