--- a/DockerComposeWorkouts/compose-assignment-1/docker-compose.yml
+++ b/DockerComposeWorkouts/compose-assignment-1/docker-compose.yml
@@ -1,9 +1,9 @@
-version: 3.2
+version: '3.2'
 services:
   drupal:
     image: drupal:latest
     ports:
-      - 8080:8080
+      - 9191:8080
     volumes:
       - drupal_modules:/var/www/html/modules
       - drupal_profiles:/var/www/html/profiles
